k8s/env/local/deployment-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  template:
    spec:
      containers:
      - name: website
        image: localhost:12676/o-p-n/website:latest
        imagePullPolicy: Always
