k8s/env/local/route-hostnames-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: website
  namespace: website
spec:
  hostnames:
   - k8s.test
